tests/snapshots/snapshot_provider_test__snapshot_open_meteo_ny_6pm_before_gmt_boundary.snap
---
source: tests/snapshot_provider_test.rs
expression: svg_content
---
<svg width="800" height="480" font-family="Roboto, sans-serif" xmlns="http://www.w3.org/2000/svg">

    <!-- tspan doesn't work well with the degree symbol ° for some fonts!-->
    <!-- Avoid using tspan with text-anchor, `dx` or `dy`, resvg doesn't handle it properly -->
    <!-- see https://github.com/linebender/resvg/issues/583 -->

    <defs>
        <linearGradient id="fillGradient" x1="0%" y1="100%" x2="0%" y2="0%">
            <stop offset="0%" stop-color="blue" stop-opacity="0.5" />
            <stop offset="100%" stop-color="blue" stop-opacity="0.1" />
        </linearGradient>
        <pattern id="dots" patternUnits="userSpaceOnUse" width="10" height="10">
            <circle cx="5" cy="5" r="2" fill="blue" />
        </pattern>
        <pattern id="grid" patternUnits="userSpaceOnUse" width="10" height="10">
            <path d="M 10 0 L 0 0 0 10" fill="none" stroke="blue" stroke-width="1" />
        </pattern>
        <pattern id="diagonal-lines" patternUnits="userSpaceOnUse" width="10" height="10">
            <path d="M 0 10 L 10 0" stroke="blue" stroke-width="2" />
        </pattern>
        <pattern id="crosshatch" patternUnits="userSpaceOnUse" width="10" height="10">
            <path d="M 0 0 L 10 10 M 10 0 L 0 10" stroke="blue" stroke-width="1" />
        </pattern>
    </defs>

    <rect width="100%" height="100%" fill="black" />

    <!-- Current Day Information -->
    <text x="400" y="50" font-size="35" fill="white" text-anchor="middle">Sunday, 28 December</text>
    <image x="0" y="0" width="200" height="180" href="static/fill-svg-static/overcast-night.svg" />


    <!-- Current temperature summary -->
    <svg x="650" y="0" font-size="10" text-anchor="start">
        <text x="0" y="28" font-size="28" fill="red">-2°C / 28°F</text>
        <text x="0" y="52" font-size="16" fill="white">H -1°C / 30°F</text>
        <text x="0" y="73" font-size="16" fill="white">L -10°C / 13°F</text>
    </svg>

    <!-- Feels Like temperature -->
    <text x="246" y="118" text-anchor="middle" font-size="18" fill="white">
        <tspan>Feels</tspan>
        <tspan dy="15.5" dx="-46.6">Like</tspan>
        <tspan font-family="Roboto-Regular-Dashed" dominant-baseline="middle" font-size="55" fill="green"
            dx="10" dy="-7">
            -6
            <tspan baseline-shift="12" dx="-15" font-size="30">°C</tspan>
        </tspan>
    </text>

    <!-- Diagnostic Message -->
    <svg x="580" y="0" width="200" height="100" text-anchor="middle" visibility="hidden">
        <!-- Cascading diagnostic icons (stacked by priority) -->
        
        <!-- Message for highest priority error only -->
        <text x="100" y="60" width="200" font-size="12">
            N/A
        </text>
    </svg>

    <!-- Sunset/Sunrise Information -->
    <svg x="30" y="150">
        <image x="0" y="0" width="75" height="75" href="static/fill-svg-static/sunrise.svg" />
        <text x="12" y="70" text-anchor="start" font-size="20" fill="white">07:20</text>

        <image x="70" y="0" width="75" height="75" href="static/fill-svg-static/sunset.svg" />
        <text x="83" y="70" text-anchor="start" font-size="20" fill="white">16:38</text>
    </svg>

    <g transform="translate(-15, 0)">

        <!-- vertical lines with artistic variations -->
        <svg class="line">
            <path d="M95 240 C90 220, 95 320, 95 470" />
            <path d="M150 240 C155 220, 145 320, 150 470" />

            <!-- horizontal lines with artistic variations -->
            <path d="M40 260 C150 261, 250 258, 185 260" />
            <path d="M40 330 C150 325, 250 335, 185 330" />
            <path d="M40 400 C150 402, 250 399, 185 400" />
        </svg>

        <!-- row header-->
        <svg x="15" y="210" label="UV-index" text-anchor="start">
            <text x="16" y="43.5" fill="white" font-size="20">Metric
            </text>

            <text x="85" y="43.5" fill="white" font-size="20">Now
            </text>
            <text x="140" y="43.5" fill="white" font-size="20">Max
                <tspan baseline-shift="super" font-size="17" dx="-3">24h</tspan>
            </text>
        </svg>

        <!-- UV Index -->
        <svg x="20" y="260" label="UV-index" text-anchor="middle">
            <image width="75" height="75" href="static/fill-svg-static/uv-index-none.svg" />
            <text x="100" y="45.5" font-size="30" fill="white">0
            </text>
            <text x="155" y="45.5" font-size="30" fill="white"
                font-style="italic">1
            </text>
        </svg>

        <!-- Wind Information -->
        <svg x="20" y="330" label="wind" text-anchor="middle">
            <text x="42.2" y="66.2" fill="white" font-size="15.1" text-anchor="middle">
                km/h
            </text>
            <image width="75" height="75" href="static/fill-svg-static/wind.svg" />
            <text x="100" y="45.5" font-size="30" fill="white">7
            </text>
            <text x="155" y="45.5" font-size="30" fill="white"
                font-style="italic">32
            </text>
        </svg>

        <!-- Relative Humidity -->
        <svg x="20" y="400" label="relative_humidity" text-anchor="middle">
            <image width="75" height="75" href="static/fill-svg-static/humidity-plus-plus.svg" />
            <text x="100" y="45.5" font-size="30" fill="white">89
            </text>
            <text x="155" y="45.5" font-size="30" fill="white"
                font-style="italic">94
            </text>
        </svg>
    </g>


    <!-- Forecast for the next 6 days -->
    <svg x="292" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Mon</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/extreme-day.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">8°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">-1°</tspan>
        </text>
    </svg>

    <svg x="373" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Tue</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/extreme-day.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">0°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">-3°</tspan>
        </text>
    </svg>

    <svg x="454" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Wed</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/clear-day.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">1°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">-3°</tspan>
        </text>
    </svg>

    <svg x="535" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Thu</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/clear-day.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">1°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">-5°</tspan>
        </text>
    </svg>

    <svg x="616" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Fri</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/clear-day.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">-3°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">-5°</tspan>
        </text>
    </svg>

    <svg x="697" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="white">Sat</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/partly-cloudy-day.svg" />
        <text y="155" font-size="20" fill="white">
            <tspan x="52" text-anchor="end">-3°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">-6°</tspan>
        </text>
    </svg>

    <!-- Graph for hourly forecast -->
    <svg x="220" y="160" width="560" height="350" viewBox="-50 0 690 300" preserveAspectRatio="xMidYMid meet"
        style="overflow: visible;">
        <path stroke="white" stroke-linejoin="round" stroke-width="2" d="M 0 300 L 600 300 M 0 295 L 0 305 M 100 295 L 100 305 M 200 295 L 200 305 M 300 295 L 300 305 M 400 295 L 400 305 M 500 295 L 500 305 M 600 295 L 600 305" fill="none" />
        <!-- X axis Guidelines -->
        <path stroke="white" stroke-linejoin="round" stroke-width="1" d="M 0 300 L 600 300 M 0 300 v -300 m 0 2 v -2 M 100 300 v -300 m 0 2 v -2 M 200 300 v -300 m 0 2 v -2 M 300 300 v -300 m 0 2 v -2 M 400 300 v -300 m 0 2 v -2 M 500 300 v -300 m 0 2 v -2 M 600 300 v -300 m 0 2 v -2" fill="none"
            stroke-dasharray="5,10" />
        <!-- X Labels -->
        <text x="0" y="320" fill="white" font-size="19" text-anchor="middle">6pm</text><text x="100" y="320" fill="white" font-size="19" text-anchor="middle">10pm</text><text x="200" y="320" fill="white" font-size="19" text-anchor="middle">2am</text><text x="300" y="320" fill="white" font-size="19" text-anchor="middle">6am</text><text x="400" y="320" fill="white" font-size="19" text-anchor="middle">10am</text><text x="500" y="320" fill="white" font-size="19" text-anchor="middle">2pm</text><text x="600" y="320" fill="white" font-size="19" text-anchor="middle">6pm</text><line x1="150" y1="0" x2="150" y2="300" stroke="white" stroke-width="2" stroke-dasharray="3,3" />
                   <text x="160" y="170" fill="white" font-size="19" font-style="italic"  transform="rotate(-90, 130, 135)" text-anchor="start">Monday</text>
        <!-- Y Labels -->
        <text x="-10" y="300"  fill="white" font-size="35" text-anchor="end" dx="8" dy="4">-7°</text><text x="-10" y="240"  fill="white" font-size="19" text-anchor="end" dx="8" dy="4">-1.6°</text><text x="-10" y="180"  fill="white" font-size="19" text-anchor="end" dx="8" dy="4">3.8°</text><text x="-10" y="120"  fill="white" font-size="19" text-anchor="end" dx="8" dy="4">9.2°</text><text x="-10" y="60"  fill="white" font-size="19" text-anchor="end" dx="8" dy="4">14.6°</text><text x="-10" y="0"  fill="white" font-size="35" text-anchor="end" dx="8" dy="4">20°</text>
        <!-- Y right Labels -->
        <text x="610" y="300" fill="white"  font-size="19" text-anchor="start" dy="4">0%</text><text x="610" y="240" fill="white"  font-size="19" text-anchor="start" dy="4">20%</text><text x="610" y="180" fill="white"  font-size="19" text-anchor="start" dy="4">40%</text><text x="610" y="120" fill="white"  font-size="19" text-anchor="start" dy="4">60%</text><text x="610" y="60" fill="white"  font-size="19" text-anchor="start" dy="4">80%</text><text x="610" y="0" fill="white"  font-size="19" text-anchor="start" dy="4">100%</text>
        <path stroke="red" stroke-linejoin="round" transform="translate(0, 300) scale(1, -1)"
            d="M 0.0000 58.7037C 34.7826 64.2593, 43.4783 63.5185, 52.1739 63.3333C 60.8696 63.1481, 69.5652 61.8518, 78.2609 62.2222C 86.9565 62.5926, 95.6522 64.4445, 104.3478 65.5556C 113.0435 66.6667, 121.7391 67.5926, 130.4348 68.8889C 139.1304 70.1852, 147.8261 71.6667, 156.5217 73.3333C 165.2174 75.0000, 173.9130 77.7778, 182.6087 78.8889C 191.3043 80.0000, 200.0000 79.4444, 208.6956 80.0000C 217.3913 80.5555, 226.0870 81.4815, 234.7826 82.2222C 243.4783 82.9630, 252.1739 83.7037, 260.8696 84.4444C 269.5652 85.1852, 278.2609 85.7407, 286.9565 86.6667C 295.6521 87.5926, 304.3478 88.8889, 313.0435 90.0000C 321.7391 91.1111, 330.4348 92.5926, 339.1304 93.3333C 347.8261 94.0741, 356.5217 91.8518, 365.2174 94.4444C 373.9131 97.0370, 382.6087 102.2222, 391.3044 108.8889C 400.0000 115.5555, 408.6956 125.3704, 417.3913 134.4444C 426.0869 143.5185, 434.7826 159.0741, 443.4782 163.3333C 452.1739 167.5926, 460.8696 162.0370, 469.5652 160.0000C 478.2609 157.9630, 486.9565 152.5926, 495.6522 151.1111C 504.3478 149.6296, 513.0435 155.1852, 521.7391 151.1111C 530.4348 147.0370, 539.1304 135.3704, 547.8260 126.6667C 556.5217 117.9629, 565.2173 106.4815, 573.9130 98.8889C 582.6086 91.2963, 595.6522 84.0741, 600.0000 81.1111" stroke-width="3.0" fill="none" />
        <path stroke="green" stroke-linejoin="round" stroke-dasharray="5,5"
            transform="translate(0, 300) scale(1, -1)" d="M 0.0000 18.7037C 34.7826 31.1111, 43.4783 30.0000, 52.1739 30.0000C 60.8696 30.0000, 69.5652 28.7037, 78.2609 28.8889C 86.9565 29.0741, 95.6522 30.1852, 104.3478 31.1111C 113.0435 32.0370, 121.7391 33.5185, 130.4348 34.4444C 139.1304 35.3704, 147.8261 35.0000, 156.5217 36.6667C 165.2174 38.3333, 173.9130 42.7778, 182.6087 44.4444C 191.3043 46.1111, 200.0000 45.5556, 208.6956 46.6667C 217.3913 47.7778, 226.0870 49.6296, 234.7826 51.1111C 243.4783 52.5926, 252.1739 54.8148, 260.8696 55.5556C 269.5652 56.2963, 278.2609 54.8148, 286.9565 55.5556C 295.6521 56.2963, 304.3478 58.5185, 313.0435 60.0000C 321.7391 61.4815, 330.4348 64.0741, 339.1304 64.4444C 347.8261 64.8148, 356.5217 61.2963, 365.2174 62.2222C 373.9131 63.1481, 382.6087 64.8148, 391.3044 70.0000C 400.0000 75.1852, 408.6956 84.6296, 417.3913 93.3333C 426.0869 102.0370, 434.7826 117.5926, 443.4782 122.2222C 452.1739 126.8518, 460.8696 123.1481, 469.5652 121.1111C 478.2609 119.0741, 486.9565 115.0000, 495.6522 110.0000C 504.3478 105.0000, 513.0435 101.1111, 521.7391 91.1111C 530.4348 81.1111, 539.1304 62.0370, 547.8260 50.0000C 556.5217 37.9630, 565.2173 27.2222, 573.9130 18.8889C 582.6086 10.5556, 595.6522 3.1481, 600.0000 0.0000" stroke-width="3.0" fill="none" />
        <path transform="translate(0, 300) scale(1, -1)" d="M 0.0000 54.0000L 26.086956 54L 52.173912 18L 78.260864 27L 104.347824 24L 130.43478 18L 156.52173 18L 182.60869 18L 208.69565 21L 234.78261 12L 260.86957 9L 286.9565 6L 313.04346 15L 339.13043 12L 365.21738 57L 391.30435 135L 417.3913 204L 443.47824 165L 469.56522 90L 495.65216 72L 521.73914 30L 547.82605 9L 573.913 0L 600 0 L 600 0 L 0 0Z" fill="blue"
            fill-opacity="25%" />
        <defs>
            <linearGradient id="UVGradient" gradientUnits="objectBoundingBox" x1="0%" y1="0%" x2="100%" y2="0%">
                <stop offset="0.00%" stop-color="white"/><stop offset="4.35%" stop-color="white"/><stop offset="8.70%" stop-color="white"/><stop offset="13.04%" stop-color="white"/><stop offset="17.39%" stop-color="white"/><stop offset="21.74%" stop-color="white"/><stop offset="26.09%" stop-color="white"/><stop offset="30.43%" stop-color="white"/><stop offset="34.78%" stop-color="white"/><stop offset="39.13%" stop-color="white"/><stop offset="43.48%" stop-color="white"/><stop offset="47.83%" stop-color="white"/><stop offset="52.17%" stop-color="white"/><stop offset="56.52%" stop-color="white"/><stop offset="60.87%" stop-color="white"/><stop offset="65.22%" stop-color="white"/><stop offset="69.57%" stop-color="white"/><stop offset="73.91%" stop-color="white"/><stop offset="78.26%" stop-color="white"/><stop offset="82.61%" stop-color="white"/><stop offset="86.96%" stop-color="white"/><stop offset="91.30%" stop-color="green"/><stop offset="95.65%" stop-color="green"/><stop offset="100.00%" stop-color="white"/>
            </linearGradient>
        </defs>
        <rect x="0" y="-14" width="600" height="8" fill="url(#UVGradient)" />
        <path stroke="white" stroke-linejoin="round" stroke-width="2" d="M 0 300 L 600 300 M 0 295 L 0 305 M 100 295 L 100 305 M 200 295 L 200 305 M 300 295 L 300 305 M 400 295 L 400 305 M 500 295 L 500 305 M 600 295 L 600 305" fill="none" />
        <path stroke="red" stroke-linejoin="round" stroke-width="2" d="M 0 0 L 0 300 M -5 300 L 5 300 M -5 240 L 5 240 M -5 180 L 5 180 M -5 120 L 5 120 M -5 60 L 5 60 M -5 0 L 5 0" />
        <path stroke="blue" stroke-linejoin="round" stroke-width="3" d="M 600 0 L 600 300 M 595 300 L 605 300 M 595 240 L 605 240 M 595 180 L 605 180 M 595 120 L 605 120 M 595 60 L 605 60 M 595 0 L 605 0"
            fill="none" />
    </svg>
    <!-- These are needed render svg in browser/ide -->
    <style>
        @font-face {
            font-family: 'Roboto';
            src: url('static/fonts/Roboto-Regular.ttf') format('truetype');
        }

        @font-face {
            font-family: 'Roboto-Regular-Dashed';
            src: url('static/fonts/Roboto-Regular-Dashed.ttf') format('truetype');
        }

        .line {
            stroke: white;
            stroke-width: 2;
            stroke-linecap: round;
            stroke-linejoin: round;
        }
    </style>
</svg>
